service section almost Done, need to do 3 containers + fix white space

--- a/src/Sass/_keyframes.scss
+++ b/src/Sass/_keyframes.scss
@@ -61,7 +61,39 @@
 
 
 
-@keyframes h2_animation {
-  0% {transform: translateY(0px); opacity: 0.5;}
-  100% {transform: translateY(3px); opacity: 1;}
+@keyframes h4_text_animation {
+  0% {opacity: 1;}
+  100% {opacity: 0;}
+}
+
+@keyframes jump_scale {
+  0% {
+    transform: scale(0);
+    top: 600px;
+    opacity: 0;
+  }
+
+  50%{
+    transform: scale(1);
+    top: 300px;
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1);
+    top: 400px;
+    opacity: 1;
+  }
+}
+
+@keyframes move_h2_animation {
+  0%{
+    left: -100rem;
+  }
+  50%{
+    left: 80%;
+  }
+  100%{
+    left: 40%;
+  }
 }
